[project]
name = "py-tuntap-abi3"
description = "Native CPython abi3 TUN/TAP extension for Linux, macOS, and Windows"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "FC_LICENSE" }
keywords = ["tun", "tuntap", "darwin", "macos", "windows"]
authors = [
    { name = "David Helkowski", email = "github@codechild.com" }
]
maintainers = [
    { name = "David Helkowski", email = "github@codechild.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: C",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/dryark/py-tuntap-abi3"
"Bug Reports" = "https://github.com/dryark/py-tuntap-abi3/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "scripts*"]

[tool.setuptools_scm]
version_file = "py_tuntap_abi3/_version.py"

[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"
